--- a/translations/kangyur/placeholders/072-023_toh323-the_single_stanza.xml
+++ b/translations/kangyur/placeholders/072-023_toh323-the_single_stanza.xml
@@ -7,17 +7,18 @@
                 <title type="mainTitle" xml:lang="en">The Single Stanza</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">Ekagāthā</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">tshigs su bcad pa gcig pa/</title>
-                <author role="translatorMain" xml:id="UT22084-072-023-1"/>
+                <author role="translatorMain" xml:id="UT22084-072-023-1">Pema Yeshé Dé Translation Team</author>
                 <consultant role="projectManager" xml:id="UT22084-072-023-2">Giuliano Francisco Proença</consultant>
                 <author role="translatorEng" xml:id="UT22084-072-023-3">Giuliano Francisco Proença</author>
                 <editor role="proofreader" xml:id="UT22084-072-023-4">Daniela Espíndola</editor>
+                <editor role="projectEditor" xml:id="UT22084-072-023-21">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2024</date>
+                <edition>v 0.0.10 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-072-023"/>
                 <date/>
             </publicationStmt>
@@ -68,6 +69,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-06-20T10:01:44.433Z" type="text-version" status="0.0.8" xml:id="UT22084-072-023-16">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-20T10:02:24.959Z" type="text-version" status="0.0.9" xml:id="UT22084-072-023-22">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-04T08:54:57.947Z" type="translation-status" status="2.e" xml:id="UT22084-072-023-23">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-04T08:54:57.947Z" type="text-version" status="0.0.10" xml:id="UT22084-072-023-24">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
