--- a/translations/kangyur/placeholders/072-024_toh324-the_four_stanzas.xml
+++ b/translations/kangyur/placeholders/072-024_toh324-the_four_stanzas.xml
@@ -13,11 +13,11 @@
                 <editor role="proofreader" xml:id="UT22084-072-024-4">Daniela Espíndola</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2024</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-072-024"/>
                 <date/>
             </publicationStmt>
@@ -59,6 +59,12 @@
                     <desc>2.h</desc>
                 </change>
                 <change who="#line-tofte" when="2024-03-18T15:22:36.153Z" type="text-version" status="0.0.6" xml:id="UT22084-072-024-13">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-04T08:57:05.453Z" type="translation-status" status="2.e" xml:id="UT22084-072-024-14">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-04T08:57:05.453Z" type="text-version" status="0.0.7" xml:id="UT22084-072-024-15">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
