--- a/translations/kangyur/placeholders/101-079_toh1024-the_incantation_for_calming_suffering.xml
+++ b/translations/kangyur/placeholders/101-079_toh1024-the_incantation_for_calming_suffering.xml
@@ -15,7 +15,7 @@
                 <editor role="copyEditor" xml:id="UT22084-101-079-30">Konchog Norbu</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.15 <date>2024</date>
+                <edition>v 0.0.16 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -28,7 +28,7 @@
                     <ref>Toh 1024</ref>
                     <biblScope>vol.101, ff.183r-183v(pp.365-366)</biblScope>
                     <location work="UT4CZ5369" count-pages="2">
-                        <volume number="101" start-page="365" end-page="366"/>
+                        <volume number="102" start-page="365" end-page="366"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12787" work="W22084"/>
@@ -107,6 +107,9 @@
                 </change>
                 <change who="#line-tofte" when="2024-04-25T13:07:04.127Z" type="text-version" status="0.0.15" xml:id="UT22084-101-079-35">
                     <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#sameer" when="2024-07-04T09:04:33.325Z" type="text-version" status="0.0.16" xml:id="UT22084-101-079-36">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
