--- a/translations/kangyur/placeholders/096-037_toh788,1026-the_incantation_for_calming_the_enraged.xml
+++ b/translations/kangyur/placeholders/096-037_toh788,1026-the_incantation_for_calming_the_enraged.xml
@@ -12,7 +12,7 @@
                 <author role="translatorEng" xml:id="UT22084-096-037-5">Catherine Dalton</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2023</date>
+                <edition>v 0.0.2 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -33,7 +33,7 @@
                     <ref>Toh 1026</ref>
                     <biblScope>vol.101, ff.184r-184r(pp.367-367)</biblScope>
                     <location work="UT4CZ5369" count-pages="1">
-                        <volume number="101" start-page="367" end-page="367"/>
+                        <volume number="102" start-page="367" end-page="367"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12789" work="W22084"/>
@@ -56,6 +56,9 @@
                 </change>
                 <change who="#admin" when="2023-12-07T15:08:28.13Z" type="text-version" status="0.0.1" xml:id="UT22084-096-037-7">
                     <desc>script-increment-version-published</desc>
+                </change>
+                <change who="#sameer" when="2024-07-04T09:07:50.821Z" type="text-version" status="0.0.2" xml:id="UT22084-096-037-8">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
