--- a/translations/kangyur/placeholders/096-043_toh794,1030-the_incantation_for_accomplishing_actions.xml
+++ b/translations/kangyur/placeholders/096-043_toh794,1030-the_incantation_for_accomplishing_actions.xml
@@ -11,7 +11,7 @@
                 <author role="translatorEng" xml:id="UT22084-096-043-5">Catherine Dalton</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2023</date>
+                <edition>v 0.0.2 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -32,7 +32,7 @@
                     <ref>Toh 1030</ref>
                     <biblScope>vol.101, ff.184v-184v(pp.368-368)</biblScope>
                     <location work="UT4CZ5369" count-pages="1">
-                        <volume number="101" start-page="368" end-page="368"/>
+                        <volume number="102" start-page="368" end-page="368"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12793" work="W22084"/>
@@ -55,6 +55,9 @@
                 </change>
                 <change who="#admin" when="2023-12-07T15:06:38.622Z" type="text-version" status="0.0.1" xml:id="UT22084-096-043-7">
                     <desc>script-increment-version-published</desc>
+                </change>
+                <change who="#sameer" when="2024-07-04T09:12:40.477Z" type="text-version" status="0.0.2" xml:id="UT22084-096-043-8">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
