--- a/translations/kangyur/placeholders/043-016_toh79-the_sutra_teaching_the_unfathomable_sphere_of_a_buddha.xml
+++ b/translations/kangyur/placeholders/043-016_toh79-the_sutra_teaching_the_unfathomable_sphere_of_a_buddha.xml
@@ -17,11 +17,11 @@
                 <sponsor xml:id="UT22084-043-016-21">Aron Csondes</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.11 <date>2024</date>
+                <edition>v 0.0.12 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-043-016"/>
                 <date/>
             </publicationStmt>
@@ -84,6 +84,12 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2024-06-21T10:00:56.738Z" type="text-version" status="0.0.11" xml:id="UT22084-043-016-24">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-04T10:07:26.211Z" type="translation-status" status="2.d" xml:id="UT22084-043-016-25">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-04T10:07:26.211Z" type="text-version" status="0.0.12" xml:id="UT22084-043-016-26">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
