--- a/translations/kangyur/placeholders/088-028_toh534,861-the_incantation_the_essence_of_vairocana.xml
+++ b/translations/kangyur/placeholders/088-028_toh534,861-the_incantation_the_essence_of_vairocana.xml
@@ -14,11 +14,11 @@
                 <editor role="copyEditor" xml:id="UT22084-088-028-23">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.11 <date>2024</date>
+                <edition>v 0.0.12 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-088-028"/>
                 <date/>
             </publicationStmt>
@@ -93,6 +93,12 @@
                     <desc>2.d</desc>
                 </change>
                 <change who="#line-tofte" when="2024-06-27T09:37:08.192Z" type="text-version" status="0.0.11" xml:id="UT22084-088-028-26">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-04T10:19:46.119Z" type="translation-status" status="2.c" xml:id="UT22084-088-028-27">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-04T10:19:46.119Z" type="text-version" status="0.0.12" xml:id="UT22084-088-028-28">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
