--- a/translations/kangyur/placeholders/096-030_toh781,1032-the_incantation_for_making_people_joyful.xml
+++ b/translations/kangyur/placeholders/096-030_toh781,1032-the_incantation_for_making_people_joyful.xml
@@ -11,7 +11,7 @@
                 <author role="translatorEng" xml:id="UT22084-096-030-5">Catherine Dalton</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2023</date>
+                <edition>v 0.0.2 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -32,7 +32,7 @@
                     <ref>Toh 1032</ref>
                     <biblScope>vol.101, ff.185r-185r(pp.369-369)</biblScope>
                     <location work="UT4CZ5369" count-pages="1">
-                        <volume number="101" start-page="369" end-page="369"/>
+                        <volume number="102" start-page="369" end-page="369"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12795" work="W22084"/>
@@ -55,6 +55,9 @@
                 </change>
                 <change who="#admin" when="2023-12-07T15:05:44.008Z" type="text-version" status="0.0.1" xml:id="UT22084-096-030-7">
                     <desc>script-increment-version-published</desc>
+                </change>
+                <change who="#sameer" when="2024-07-04T13:35:27.397Z" type="text-version" status="0.0.2" xml:id="UT22084-096-030-8">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
