--- a/translations/kangyur/placeholders/096-041_toh792,1034-the_incantation_for_a_pleasant_voice.xml
+++ b/translations/kangyur/placeholders/096-041_toh792,1034-the_incantation_for_a_pleasant_voice.xml
@@ -11,7 +11,7 @@
                 <author role="translatorEng" xml:id="UT22084-096-041-6">Lowell Cook</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2024</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -32,7 +32,7 @@
                     <ref>Toh 1034</ref>
                     <biblScope>vol.101, ff.185r-185v(pp.369-370)</biblScope>
                     <location work="UT4CZ5369" count-pages="2">
-                        <volume number="101" start-page="369" end-page="370"/>
+                        <volume number="102" start-page="369" end-page="370"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12797" work="W22084"/>
@@ -64,6 +64,9 @@
                 </change>
                 <change who="#line-tofte" when="2024-02-27T15:41:14.276Z" type="text-version" status="0.0.2" xml:id="UT22084-096-041-10">
                     <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#sameer" when="2024-07-04T13:36:34.646Z" type="text-version" status="0.0.3" xml:id="UT22084-096-041-11">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
