--- a/translations/kangyur/placeholders/094-019_toh742,1036-the_spell_for_attaining_the_supreme.xml
+++ b/translations/kangyur/placeholders/094-019_toh742,1036-the_spell_for_attaining_the_supreme.xml
@@ -13,7 +13,7 @@
                 <author role="translatorEng" xml:id="UT22084-094-019-5">Ana Cristina Lopes</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2024</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -34,7 +34,7 @@
                     <ref>Toh 1036</ref>
                     <biblScope>vol.101, ff.185v-185v(pp.370-370)</biblScope>
                     <location work="UT4CZ5369" count-pages="1">
-                        <volume number="101" start-page="370" end-page="370"/>
+                        <volume number="102" start-page="370" end-page="370"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12799" work="W22084"/>
@@ -54,6 +54,9 @@
                 </change>
                 <change who="#line-tofte" when="2024-02-08T11:00:40.907Z" type="text-version" status="0.0.2" xml:id="UT22084-094-019-6">
                     <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#sameer" when="2024-07-04T13:41:04.957Z" type="text-version" status="0.0.3" xml:id="UT22084-094-019-7">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
