--- a/translations/kangyur/translations/072-021_toh321-the_verses_on_circumambulating_shrines.xml
+++ b/translations/kangyur/translations/072-021_toh321-the_verses_on_circumambulating_shrines.xml
@@ -8,7 +8,7 @@
         <title type="mainTitle" xml:lang="Sa-Ltn">Caitya­pradakṣiṇa­gāthā</title>
         <title type="mainTitle" xml:lang="bo">མཆོད་རྟེན་བསྐོར་བའི་ཚིགས་སུ་བཅད་པ།</title>
         <title type="mainTitle" xml:lang="Bo-Ltn">mchod rten bskor ba’i tshigs su bcad pa</title>
-        <author role="translatorMain" xml:id="UT22084-072-021-1">Sakya Pandita Translation Group</author>
+        <author role="translatorMain" xml:id="UT22084-072-021-1"><!--Sakya Pandita Translation Group--></author>
         <consultant role="dharmaMaster" xml:id="UT22084-072-021-2">Khenpo Kalsang Gyaltsen</consultant>
         <consultant role="projectManager" xml:id="UT22084-072-021-3">Chodrungma Kunga Chodron</consultant>
         <author role="translatorEng" xml:id="UT22084-072-021-4">Khenpo Kalsang Gyaltsen</author>
@@ -21,7 +21,7 @@
         <editor role="finalReviewer" xml:id="UT22084-072-021-300">Andreas Doctor</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.0 <date>2024</date>
+                <edition>v 1.0.1 <date>2024</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -152,6 +152,9 @@
                 </change>
                 <change who="#sameer" when="2024-07-04T07:45:52.866Z" type="text-version" status="1.0.0" xml:id="UT22084-072-021-306">
                     <desc>First published version.</desc>
+                </change>
+                <change who="#celso" when="2024-07-04T15:56:23.179Z" type="text-version" status="1.0.1" xml:id="UT22084-072-021-307">
+                    <desc>Removed orange box on cover page</desc>
                 </change>
       </revisionDesc>
     </fileDesc>
