--- a/translations/kangyur/translations/072-022_toh322-verses_for_prasenajit.xml
+++ b/translations/kangyur/translations/072-022_toh322-verses_for_prasenajit.xml
@@ -10,7 +10,7 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">gsal rgyal gyi tshigs bcad</title>
                 <title type="longTitle" xml:lang="bo">གསལ་རྒྱལ་གྱི་ཚིགས་སུ་བཅད་པ།</title>
                 <title type="longTitle" xml:lang="Bo-Ltn">gsal rgyal gyi tshigs su bcad pa</title>
-                <author role="translatorMain" xml:id="UT22084-072-022-1">Elizabeth Angowski</author>
+                <author role="translatorMain" xml:id="UT22084-072-022-1"><!--Elizabeth Angowski--></author>
                 <author role="translatorEng" xml:id="UT22084-072-022-2">Elizabeth Angowski</author>
                 <editor role="projectEditor" xml:id="UT22084-072-022-15">David Fiordalis</editor>
                 <editor role="copyEditor" xml:id="UT22084-072-022-22">Dawn Collins</editor>
@@ -19,7 +19,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-072-022-241">Andreas Doctor</editor>
             </titleStmt>
       <editionStmt>
-                <edition>v 1.0.0 <date>2024</date>
+                <edition>v 1.0.1 <date>2024</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -146,6 +146,9 @@
                 </change>
                 <change who="#sameer" when="2024-07-04T07:49:57.97Z" type="text-version" status="1.0.0" xml:id="UT22084-072-022-250">
                     <desc>First published version.</desc>
+                </change>
+                <change who="#celso" when="2024-07-04T16:00:36.05Z" type="text-version" status="1.0.1" xml:id="UT22084-072-022-251">
+                    <desc>Removed orange box on cover page</desc>
                 </change>
       </revisionDesc>
     </fileDesc>
