--- a/translations/kangyur/placeholders/093-033_toh718,1037-the_incantation_for_developing_insight.xml
+++ b/translations/kangyur/placeholders/093-033_toh718,1037-the_incantation_for_developing_insight.xml
@@ -15,7 +15,7 @@
                 <author role="translatorEng" xml:id="UT22084-093-033-5">Paul G. Hackett</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2024</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -36,7 +36,7 @@
                     <ref>Toh 1037</ref>
                     <biblScope>vol.101, ff.185v-186r(pp.370-371)</biblScope>
                     <location work="UT4CZ5369" count-pages="2">
-                        <volume number="101" start-page="370" end-page="371"/>
+                        <volume number="102" start-page="370" end-page="371"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12800" work="W22084"/>
@@ -56,6 +56,9 @@
                 </change>
                 <change who="#line-tofte" when="2024-02-08T11:26:03.759Z" type="text-version" status="0.0.2" xml:id="UT22084-093-033-6">
                     <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#sameer" when="2024-07-05T05:33:03.088Z" type="text-version" status="0.0.3" xml:id="UT22084-093-033-7">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
