--- a/translations/kangyur/placeholders/091-047_toh650,1039-the_incantation_for_developing_insight.xml
+++ b/translations/kangyur/placeholders/091-047_toh650,1039-the_incantation_for_developing_insight.xml
@@ -13,7 +13,7 @@
                 <author role="translatorEng" xml:id="UT22084-091-047-5">Ana Cristina Lopes</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2024</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -34,7 +34,7 @@
                     <ref>Toh 1039</ref>
                     <biblScope>vol.101, ff.186v-186v(pp.372-372)</biblScope>
                     <location work="UT4CZ5369" count-pages="1">
-                        <volume number="101" start-page="372" end-page="372"/>
+                        <volume number="102" start-page="372" end-page="372"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12802" work="W22084"/>
@@ -54,6 +54,9 @@
                 </change>
                 <change who="#line-tofte" when="2024-02-08T10:53:55.681Z" type="text-version" status="0.0.2" xml:id="UT22084-091-047-6">
                     <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#sameer" when="2024-07-05T05:35:07.429Z" type="text-version" status="0.0.3" xml:id="UT22084-091-047-7">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
