--- a/translations/kangyur/placeholders/091-048_toh651,1040-the_incantation_for_retaining_what_one_hears.xml
+++ b/translations/kangyur/placeholders/091-048_toh651,1040-the_incantation_for_retaining_what_one_hears.xml
@@ -12,7 +12,7 @@
                 <editor role="reviser" xml:id="UT22084-091-048-7">Patrick Lambelet</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.4 <date>2023</date>
+                <edition>v 0.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -34,7 +34,7 @@
                     <ref>Toh 1040</ref>
                     <biblScope>vol.101, ff.186v-187r(pp.372-373)</biblScope>
                     <location work="UT4CZ5369" count-pages="2">
-                        <volume number="101" start-page="372" end-page="373"/>
+                        <volume number="102" start-page="372" end-page="373"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12803" work="W22084"/>
@@ -59,6 +59,9 @@
                 </change>
                 <change who="#line-tofte" when="2023-08-09T10:24:08.742Z" type="text-version" status="0.0.4" xml:id="UT22084-091-048-8">
                     <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#sameer" when="2024-07-05T05:35:43.948Z" type="text-version" status="0.0.5" xml:id="UT22084-091-048-9">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
