--- a/translations/kangyur/placeholders/093-035_toh720,1041-the_incantation_for_retaining_what_one_hears.xml
+++ b/translations/kangyur/placeholders/093-035_toh720,1041-the_incantation_for_retaining_what_one_hears.xml
@@ -11,7 +11,7 @@
                 <author role="translatorEng" xml:id="UT22084-093-035-5">Paul G. Hackett</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2024</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -32,7 +32,7 @@
                     <ref>Toh 1041</ref>
                     <biblScope>vol.101, ff.187r-187r(pp.373-373)</biblScope>
                     <location work="UT4CZ5369" count-pages="1">
-                        <volume number="101" start-page="373" end-page="373"/>
+                        <volume number="102" start-page="373" end-page="373"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12804" work="W22084"/>
@@ -52,6 +52,9 @@
                 </change>
                 <change who="#line-tofte" when="2024-02-08T11:28:53.617Z" type="text-version" status="0.0.2" xml:id="UT22084-093-035-6">
                     <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#sameer" when="2024-07-05T05:39:22.206Z" type="text-version" status="0.0.3" xml:id="UT22084-093-035-7">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
