--- a/translations/kangyur/placeholders/088-034_toh539e,774,1074-the_incantation_of_the_polished_jewel.xml
+++ b/translations/kangyur/placeholders/088-034_toh539e,774,1074-the_incantation_of_the_polished_jewel.xml
@@ -14,12 +14,12 @@
                 <author role="translatorEng" xml:id="UT22084-088-034-2">Catherine Dalton</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2024</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-088-034"/>
                 <date/>
             </publicationStmt>
@@ -77,6 +77,12 @@
                 </change>
                 <change who="#sameer" when="2024-04-01T15:48:58.538Z" type="text-version" status="0.0.6" xml:id="UT22084-088-034-10">
                     <desc>Updated vol. 88 and 101 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-05T09:01:37.842Z" type="translation-status" status="2.e" xml:id="UT22084-088-034-11">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-05T09:01:37.842Z" type="text-version" status="0.0.7" xml:id="UT22084-088-034-12">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
