--- a/translations/kangyur/placeholders/093-028_toh713,1044-the_incantation_training_in_the_thousand_verses.xml
+++ b/translations/kangyur/placeholders/093-028_toh713,1044-the_incantation_training_in_the_thousand_verses.xml
@@ -11,7 +11,7 @@
                 <author role="translatorEng" xml:id="UT22084-093-028-5">Ana Cristina Lopes</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2024</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -32,7 +32,7 @@
                     <ref>Toh 1044</ref>
                     <biblScope>vol.101, ff.187v-187v(pp.374-374)</biblScope>
                     <location work="UT4CZ5369" count-pages="1">
-                        <volume number="101" start-page="374" end-page="374"/>
+                        <volume number="102" start-page="374" end-page="374"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12807" work="W22084"/>
@@ -52,6 +52,9 @@
                 </change>
                 <change who="#line-tofte" when="2024-02-08T10:59:31.717Z" type="text-version" status="0.0.2" xml:id="UT22084-093-028-6">
                     <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#sameer" when="2024-07-05T17:51:59.942Z" type="text-version" status="0.0.3" xml:id="UT22084-093-028-7">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
