--- a/translations/kangyur/placeholders/093-029_toh714,1045-the_incantation_training_in_the_thousand_verses.xml
+++ b/translations/kangyur/placeholders/093-029_toh714,1045-the_incantation_training_in_the_thousand_verses.xml
@@ -8,6 +8,10 @@
                 <title type="mainTitle" xml:lang="Sa-Ltn">[no Sanskrit title]</title>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī, Training in the Thousand Verses</title>
             </titleStmt>
+            <editionStmt>
+                <edition>v 0.0.2 <date>2024</date>
+                </edition>
+            </editionStmt>
             <publicationStmt>
                 <availability status=""/>
                 <idno xml:id="UT22084-093-029"/>
@@ -26,7 +30,7 @@
                     <ref>Toh 1045</ref>
                     <biblScope>vol.101, ff.187v-187v(pp.374-374)</biblScope>
                     <location work="UT4CZ5369" count-pages="1">
-                        <volume number="101" start-page="374" end-page="374"/>
+                        <volume number="102" start-page="374" end-page="374"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12808" work="W22084"/>
@@ -37,6 +41,9 @@
             
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-093-029-1">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-07-05T17:53:04.466Z" type="text-version" status="0.0.2" xml:id="UT22084-093-029-2">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
