--- a/translations/kangyur/placeholders/093-032_toh717,1048-the_incantation_for_not_forgetting.xml
+++ b/translations/kangyur/placeholders/093-032_toh717,1048-the_incantation_for_not_forgetting.xml
@@ -11,7 +11,7 @@
                 <author role="translatorEng" xml:id="UT22084-093-032-5">Paul G. Hackett</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2024</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -32,7 +32,7 @@
                     <ref>Toh 1048</ref>
                     <biblScope>vol.101, ff.pp.188r-188v(375-376)</biblScope>
                     <location work="UT4CZ5369" count-pages="2">
-                        <volume number="101" start-page="375" end-page="376"/>
+                        <volume number="102" start-page="375" end-page="376"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12811" work="W22084"/>
@@ -52,6 +52,9 @@
                 </change>
                 <change who="#line-tofte" when="2024-02-08T11:16:54.46Z" type="text-version" status="0.0.2" xml:id="UT22084-093-032-6">
                     <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#sameer" when="2024-07-05T17:58:26.547Z" type="text-version" status="0.0.3" xml:id="UT22084-093-032-7">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
