--- a/translations/kangyur/placeholders/091-024_toh627,1052-not_taking_back_vitality.xml
+++ b/translations/kangyur/placeholders/091-024_toh627,1052-not_taking_back_vitality.xml
@@ -12,7 +12,7 @@
                 <author role="translatorEng" xml:id="UT22084-091-024-2">Ryan Damron</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2023</date>
+                <edition>v 0.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -34,7 +34,7 @@
                     <ref>Toh 1052</ref>
                     <biblScope>vol.101, ff.189r-189r(pp.377-377)</biblScope>
                     <location work="UT4CZ5369" count-pages="1">
-                        <volume number="101" start-page="377" end-page="377"/>
+                        <volume number="102" start-page="377" end-page="377"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12815" work="W22084"/>
@@ -53,6 +53,9 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.3" xml:id="UT22084-091-024-6">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-07-05T18:54:15.197Z" type="text-version" status="0.0.4" xml:id="UT22084-091-024-7">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
