--- a/translations/kangyur/placeholders/096-046_toh797,1053-the_incantation_for_intimidating_demons.xml
+++ b/translations/kangyur/placeholders/096-046_toh797,1053-the_incantation_for_intimidating_demons.xml
@@ -12,7 +12,7 @@
                 <author role="translatorEng" xml:id="UT22084-096-046-5">Catherine Dalton</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2023</date>
+                <edition>v 0.0.2 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -33,7 +33,7 @@
                     <ref>Toh 1053</ref>
                     <biblScope>vol.101, ff.189r-189r(pp.377-377)</biblScope>
                     <location work="UT4CZ5369" count-pages="1">
-                        <volume number="101" start-page="377" end-page="377"/>
+                        <volume number="102" start-page="377" end-page="377"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12816" work="W22084"/>
@@ -56,6 +56,9 @@
                 </change>
                 <change who="#admin" when="2023-12-07T15:11:22.754Z" type="text-version" status="0.0.1" xml:id="UT22084-096-046-7">
                     <desc>script-increment-version-published</desc>
+                </change>
+                <change who="#sameer" when="2024-07-05T18:54:57.464Z" type="text-version" status="0.0.2" xml:id="UT22084-096-046-8">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
