--- a/translations/kangyur/placeholders/088-032_toh538,1068-the_incantation_the_cloud_of_offerings.xml
+++ b/translations/kangyur/placeholders/088-032_toh538,1068-the_incantation_the_cloud_of_offerings.xml
@@ -13,9 +13,10 @@
                 <author role="translatorEng" xml:id="UT22084-088-032-2">Catherine Dalton</author>
                 <editor role="projectEditor" xml:id="UT22084-088-032-15">Nathaniel Rich</editor>
                 <editor role="copyEditor" xml:id="UT22084-088-032-24">Dawn Collins</editor>
+                <editor role="TEImarkupEditor" xml:id="UT22084-088-032-34">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.13 <date>2024</date>
+                <edition>v 0.0.15 <date>2024</date>
                 </edition>
             </editionStmt>
 
@@ -105,6 +106,12 @@
                 </change>
                 <change who="#line-tofte" when="2024-07-04T10:49:31.107Z" type="text-version" status="0.0.13" xml:id="UT22084-088-032-29">
                     <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-04T10:52:05.813Z" type="text-version" status="0.0.14" xml:id="UT22084-088-032-35">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#sameer" when="2024-07-06T10:36:22.596Z" type="text-version" status="0.0.15" xml:id="UT22084-088-032-36">
+                    <desc>Updated vol. 88 and 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
