--- a/translations/kangyur/placeholders/064-004_toh234,658,1064-the_essence_of_all_the_nagas_the_great_cloud_chapter_on_the_mandala_of_wind.xml
+++ b/translations/kangyur/placeholders/064-004_toh234,658,1064-the_essence_of_all_the_nagas_the_great_cloud_chapter_on_the_mandala_of_wind.xml
@@ -24,7 +24,7 @@
                 <author role="translatorEng" xml:id="UT22084-064-004-7">Lowell Cook</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2023</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
 
@@ -57,7 +57,7 @@
                     <ref>Toh 1064</ref>
                     <biblScope>vol.101, ff.229v-234v(pp.458-468)</biblScope>
                     <location work="UT4CZ5369" count-pages="11">
-                        <volume number="101" start-page="458" end-page="468"/>
+                        <volume number="102" start-page="458" end-page="468"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12828" work="W22084"/>
@@ -82,6 +82,9 @@
                 </change>
                 <change who="#line-tofte" when="2023-10-06T12:54:45.989Z" type="text-version" status="0.0.6" xml:id="UT22084-064-004-8">
                     <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#sameer" when="2024-07-06T10:49:34.432Z" type="text-version" status="0.0.7" xml:id="UT22084-064-004-9">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
