--- a/translations/kangyur/placeholders/091-056_toh659,1065-the_incantation_the_questions_of_the_naga_king_tejasvin.xml
+++ b/translations/kangyur/placeholders/091-056_toh659,1065-the_incantation_the_questions_of_the_naga_king_tejasvin.xml
@@ -17,7 +17,7 @@
                 <author role="translatorEng" xml:id="UT22084-091-056-5">Adam C. Krug</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2024</date>
+                <edition>v 0.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -38,7 +38,7 @@
                     <ref>Toh 1065</ref>
                     <biblScope>vol.101, ff.234v-235r(pp.468-469)</biblScope>
                     <location work="UT4CZ5369" count-pages="2">
-                        <volume number="101" start-page="468" end-page="469"/>
+                        <volume number="102" start-page="468" end-page="469"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12829" work="W22084"/>
@@ -58,6 +58,9 @@
                 </change>
                 <change who="#line-tofte" when="2024-02-08T10:37:31.439Z" type="text-version" status="0.0.4" xml:id="UT22084-091-056-6">
                     <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#sameer" when="2024-07-06T10:50:22.087Z" type="text-version" status="0.0.5" xml:id="UT22084-091-056-7">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
