--- a/translations/kangyur/placeholders/096-024_toh775,1075-the_incantation_for_circumambulation.xml
+++ b/translations/kangyur/placeholders/096-024_toh775,1075-the_incantation_for_circumambulation.xml
@@ -11,7 +11,7 @@
                 <author role="translatorEng" xml:id="UT22084-096-024-5">Catherine Dalton</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2023</date>
+                <edition>v 0.0.2 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -32,7 +32,7 @@
                     <ref>Toh 1075</ref>
                     <biblScope>vol.101, ff.239v-239v(pp.478-478)</biblScope>
                     <location work="UT4CZ5369" count-pages="1">
-                        <volume number="101" start-page="478" end-page="478"/>
+                        <volume number="102" start-page="478" end-page="478"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12839" work="W22084"/>
@@ -55,6 +55,9 @@
                 </change>
                 <change who="#admin" when="2023-12-07T15:05:44.008Z" type="text-version" status="0.0.1" xml:id="UT22084-096-024-7">
                     <desc>script-increment-version-published</desc>
+                </change>
+                <change who="#sameer" when="2024-07-06T10:57:04.515Z" type="text-version" status="0.0.2" xml:id="UT22084-096-024-8">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
