--- a/translations/kangyur/placeholders/096-025_toh776,1076-the_incantation_for_circumambulation_of_the_three_jewels.xml
+++ b/translations/kangyur/placeholders/096-025_toh776,1076-the_incantation_for_circumambulation_of_the_three_jewels.xml
@@ -14,7 +14,7 @@
                 <author role="translatorEng" xml:id="UT22084-096-025-5">Catherine Dalton</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2023</date>
+                <edition>v 0.0.2 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -35,7 +35,7 @@
                     <ref>Toh 1076</ref>
                     <biblScope>vol.101, ff.239v-240r(pp.478-479)</biblScope>
                     <location work="UT4CZ5369" count-pages="2">
-                        <volume number="101" start-page="478" end-page="479"/>
+                        <volume number="102" start-page="478" end-page="479"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12840" work="W22084"/>
@@ -58,6 +58,9 @@
                 </change>
                 <change who="#admin" when="2023-12-07T15:11:48.176Z" type="text-version" status="0.0.1" xml:id="UT22084-096-025-7">
                     <desc>script-increment-version-published</desc>
+                </change>
+                <change who="#sameer" when="2024-07-08T05:57:06.279Z" type="text-version" status="0.0.2" xml:id="UT22084-096-025-8">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
