--- a/translations/kangyur/placeholders/091-046_toh649,1077-essence_of_meteoric_gnosis.xml
+++ b/translations/kangyur/placeholders/091-046_toh649,1077-essence_of_meteoric_gnosis.xml
@@ -9,6 +9,10 @@
                 <title type="mainTitle" xml:lang="en">Essence of Meteoric Gnosis</title>
                 <title type="otherTitle" xml:lang="en">The Essence of Meteoric Gnosis</title>
             </titleStmt>
+            <editionStmt>
+                <edition>v 0.0.2 <date>2024</date>
+                </edition>
+            </editionStmt>
             <publicationStmt>
                 <availability status=""/>
                 <idno xml:id="UT22084-091-046"/>
@@ -27,7 +31,7 @@
                     <ref>Toh 1077</ref>
                     <biblScope>vol.101, ff.240r-240r(pp.479-479)</biblScope>
                     <location work="UT4CZ5369" count-pages="1">
-                        <volume number="101" start-page="479" end-page="479"/>
+                        <volume number="102" start-page="479" end-page="479"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12841" work="W22084"/>
@@ -38,6 +42,9 @@
             
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-091-046-1">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-07-08T05:58:34.837Z" type="text-version" status="0.0.2" xml:id="UT22084-091-046-2">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
