--- a/translations/kangyur/placeholders/091-045_toh648,1081-the_incantation_for_overcoming_hindrances.xml
+++ b/translations/kangyur/placeholders/091-045_toh648,1081-the_incantation_for_overcoming_hindrances.xml
@@ -11,6 +11,10 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'jur 'gegs zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn"/>
             </titleStmt>
+            <editionStmt>
+                <edition>v 0.0.2 <date>2024</date>
+                </edition>
+            </editionStmt>
             <publicationStmt>
                 <availability status=""/>
                 <idno xml:id="UT22084-091-045"/>
@@ -29,7 +33,7 @@
                     <ref>Toh 1081</ref>
                     <biblScope>vol.101, ff.245r-247r(pp.489-493)</biblScope>
                     <location work="UT4CZ5369" count-pages="5">
-                        <volume number="101" start-page="489" end-page="493"/>
+                        <volume number="102" start-page="489" end-page="493"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12845" work="W22084"/>
@@ -40,6 +44,9 @@
             
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-091-045-1">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-07-08T06:02:13.873Z" type="text-version" status="0.0.2" xml:id="UT22084-091-045-2">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
