--- a/translations/kangyur/placeholders/091-013_toh616,1083-the_incantation_seven_zombies.xml
+++ b/translations/kangyur/placeholders/091-013_toh616,1083-the_incantation_seven_zombies.xml
@@ -15,7 +15,7 @@
                 <author role="translatorEng" xml:id="UT22084-091-013-2">Ryan Damron</author>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.4 <date>2023</date>
+                <edition>v 0.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -37,7 +37,7 @@
                     <ref>Toh 1083</ref>
                     <biblScope>vol.101, ff.247v-251r(pp.494-501)</biblScope>
                     <location work="UT4CZ5369" count-pages="8">
-                        <volume number="101" start-page="494" end-page="501"/>
+                        <volume number="102" start-page="494" end-page="501"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12847" work="W22084"/>
@@ -59,6 +59,9 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.4" xml:id="UT22084-091-013-7">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-07-08T06:08:24.89Z" type="text-version" status="0.0.5" xml:id="UT22084-091-013-8">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
