--- a/translations/kangyur/placeholders/091-069_toh672,1088-the_hundred_and_eight_names_of_the_goddess_kali.xml
+++ b/translations/kangyur/placeholders/091-069_toh672,1088-the_hundred_and_eight_names_of_the_goddess_kali.xml
@@ -9,14 +9,15 @@
                 <title type="mainTitle" xml:lang="Bo-Ltn">lha mo nag mo'i mtshan brgya rtsa brgyad pa/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Śrīdevīkālīnāmāṣṭaśatakam</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">dpal lha mo nag mo'i mtshan brgya rtsa brgyad pa/</title>
-                <author role="translatorMain" xml:id="UT22084-091-069-1"/>
+                <author role="translatorMain" xml:id="UT22084-091-069-1">Dharmachakra Translation Committee</author>
                 <consultant role="projectManager" xml:id="UT22084-091-069-2">Andreas Doctor</consultant>
                 <author role="translatorEng" xml:id="UT22084-091-069-3">Adam Krug</author>
                 <editor role="reviser" xml:id="UT22084-091-069-4">Ryan Conlon</editor>
                 <consultant role="dharmaMaster" xml:id="UT22084-091-069-5">Chokyi Nyima Rinpoche</consultant>
+                <editor role="projectEditor" xml:id="UT22084-091-069-20">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.5 <date>2024</date>
+                <edition>v 0.1.7 <date>2024</date>
                 </edition>
             </editionStmt>
 
@@ -39,7 +40,7 @@
                     <ref>Toh 1088</ref>
                     <biblScope>vol.101, ff.253r-254v(pp.505-508)</biblScope>
                     <location work="UT4CZ5369" count-pages="4">
-                        <volume number="101" start-page="505" end-page="508"/>
+                        <volume number="102" start-page="505" end-page="508"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12852" work="W22084"/>
@@ -73,6 +74,12 @@
                 </change>
                 <change who="#line-tofte" when="2024-05-31T12:39:55.446Z" type="text-version" status="0.1.5" xml:id="UT22084-091-069-14">
                     <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-31T12:40:31.413Z" type="text-version" status="0.1.6" xml:id="UT22084-091-069-21">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#sameer" when="2024-07-08T06:11:53.434Z" type="text-version" status="0.1.7" xml:id="UT22084-091-069-22">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
