--- a/translations/kangyur/placeholders/093-037_toh722,812,1094-the_prayer_from_the_practice_of_avalokitesvara_that_is_like_the_wishfulfilling_jewel.xml
+++ b/translations/kangyur/placeholders/093-037_toh722,812,1094-the_prayer_from_the_practice_of_avalokitesvara_that_is_like_the_wishfulfilling_jewel.xml
@@ -16,7 +16,7 @@
                 <author role="translatorEng" xml:id="UT22084-093-037-5">Catherine Dalton</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2023</date>
+                <edition>v 0.0.2 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -46,7 +46,7 @@
                     <ref>Toh 1094</ref>
                     <biblScope>vol.101, ff.261r-262v(pp.521-524)</biblScope>
                     <location work="UT4CZ5369" count-pages="4">
-                        <volume number="101" start-page="521" end-page="524"/>
+                        <volume number="102" start-page="521" end-page="524"/>
                     </location>
                     <idno parent-id="O1JC114941JC20569" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12858" work="W22084"/>
@@ -68,6 +68,9 @@
                 </change>
                 <change who="#admin" when="2023-12-07T15:11:48.176Z" type="text-version" status="0.0.1" xml:id="UT22084-093-037-7">
                     <desc>script-increment-version-published</desc>
+                </change>
+                <change who="#sameer" when="2024-07-08T06:43:38.942Z" type="text-version" status="0.0.2" xml:id="UT22084-093-037-8">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
