--- a/translations/kangyur/placeholders/101-152_toh1096-the_prayer_of_maitreya.xml
+++ b/translations/kangyur/placeholders/101-152_toh1096-the_prayer_of_maitreya.xml
@@ -12,7 +12,7 @@
                 <author role="translatorEng" xml:id="UT22084-101-152-2">84000 editors</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2024</date>
+                <edition>v 0.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -25,7 +25,7 @@
                     <ref>Toh 1096</ref>
                     <biblScope>vol.101, ff.266r-267r(pp.531-533)</biblScope>
                     <location work="UT4CZ5369" count-pages="3">
-                        <volume number="101" start-page="531" end-page="533"/>
+                        <volume number="102" start-page="531" end-page="533"/>
                     </location>
                     <idno parent-id="O1JC114941JC20569" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12860" work="W22084"/>
@@ -56,6 +56,9 @@
                 </change>
                 <change who="#line-tofte" when="2024-02-08T11:40:59.373Z" type="text-version" status="0.0.5" xml:id="UT22084-101-152-11">
                     <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#sameer" when="2024-07-08T06:49:40.216Z" type="text-version" status="0.0.6" xml:id="UT22084-101-152-12">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
