--- a/translations/kangyur/placeholders/101-153_toh1097,4396-the_prayer_of_sublime_action.xml
+++ b/translations/kangyur/placeholders/101-153_toh1097,4396-the_prayer_of_sublime_action.xml
@@ -9,7 +9,7 @@
                 <title type="mainTitle" xml:lang="en">The Prayer of Sublime Action</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2024</date>
+                <edition>v 0.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -21,7 +21,7 @@
                     <ref>Toh 1097</ref>
                     <biblScope>vol.101, ff.267r-268v(pp.533-536)</biblScope>
                     <location work="UT4CZ5369" count-pages="4">
-                        <volume number="101" start-page="533" end-page="536"/>
+                        <volume number="102" start-page="533" end-page="536"/>
                     </location>
                     <idno parent-id="O1JC114941JC20569" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12861" work="W22084"/>
@@ -57,6 +57,9 @@
                 </change>
                 <change who="#line-tofte" when="2024-04-10T07:00:34.578Z" type="text-version" status="0.0.3" xml:id="UT22084-101-153-6">
                     <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#sameer" when="2024-07-08T06:50:30.672Z" type="text-version" status="0.0.4" xml:id="UT22084-101-153-7">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
