--- a/translations/kangyur/placeholders/096-068_toh819,1100-the_verses_of_auspiciousness_for_the_questions_of_the_god.xml
+++ b/translations/kangyur/placeholders/096-068_toh819,1100-the_verses_of_auspiciousness_for_the_questions_of_the_god.xml
@@ -15,7 +15,7 @@
                 <author role="translatorEng" xml:id="UT22084-096-068-9">Lowell Cook</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2024</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -38,7 +38,7 @@
                     <biblScope>vol.101, ff.270r-270v(pp.539-540)</biblScope>
                     <author xml:lang="en" xml:id="UT22084-096-068-2">Anon</author>
                     <location work="UT4CZ5369" count-pages="2">
-                        <volume number="101" start-page="539" end-page="540"/>
+                        <volume number="102" start-page="539" end-page="540"/>
                     </location>
                     <idno parent-id="O1JC114941JC20569" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12864" work="W22084"/>
@@ -70,6 +70,9 @@
                 </change>
                 <change who="#line-tofte" when="2024-02-08T11:36:11.216Z" type="text-version" status="0.0.2" xml:id="UT22084-096-068-10">
                     <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#sameer" when="2024-07-08T07:01:43.23Z" type="text-version" status="0.0.3" xml:id="UT22084-096-068-11">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
