--- a/translations/kangyur/placeholders/096-066_toh817,1101,4400a-verses_of_wellwishing.xml
+++ b/translations/kangyur/placeholders/096-066_toh817,1101,4400a-verses_of_wellwishing.xml
@@ -14,7 +14,7 @@
                 <author role="translatorEng" xml:id="UT22084-096-066-13">Felicia Rosas</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2024</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -35,7 +35,7 @@
                     <ref>Toh 1101</ref>
                     <biblScope>vol.101, ff.271r-272v(pp.541-544)</biblScope>
                     <location work="UT4CZ5369" count-pages="4">
-                        <volume number="101" start-page="541" end-page="544"/>
+                        <volume number="102" start-page="541" end-page="544"/>
                     </location>
                     <idno parent-id="O1JC114941JC20569" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12865" work="W22084"/>
@@ -83,6 +83,9 @@
                 </change>
                 <change who="#line-tofte" when="2024-07-04T09:23:31.931Z" type="text-version" status="0.0.6" xml:id="UT22084-096-066-16">
                     <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#sameer" when="2024-07-08T07:03:01.344Z" type="text-version" status="0.0.7" xml:id="UT22084-096-066-17">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
