--- a/translations/kangyur/placeholders/096-067_toh818,1102,4401-verses_of_wellwishing.xml
+++ b/translations/kangyur/placeholders/096-067_toh818,1102,4401-verses_of_wellwishing.xml
@@ -9,7 +9,7 @@
                 <title type="mainTitle" xml:lang="en">Verses of Well-wishing</title>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2024</date>
+                <edition>v 0.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -30,7 +30,7 @@
                     <ref>Toh 1102</ref>
                     <biblScope>vol.101, ff.272v-273r(pp.544-545)</biblScope>
                     <location work="UT4CZ5369" count-pages="2">
-                        <volume number="101" start-page="544" end-page="545"/>
+                        <volume number="102" start-page="544" end-page="545"/>
                     </location>
                     <idno parent-id="O1JC114941JC20569" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12866" work="W22084"/>
@@ -66,6 +66,9 @@
                 </change>
                 <change who="#line-tofte" when="2024-04-10T06:58:52.09Z" type="text-version" status="0.0.3" xml:id="UT22084-096-067-6">
                     <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#sameer" when="2024-07-08T07:07:42.348Z" type="text-version" status="0.0.4" xml:id="UT22084-096-067-7">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
