--- a/translations/kangyur/placeholders/096-070_toh821,1104-the_verses_of_auspiciousness_for_the_seven_successive_past_buddhas.xml
+++ b/translations/kangyur/placeholders/096-070_toh821,1104-the_verses_of_auspiciousness_for_the_seven_successive_past_buddhas.xml
@@ -9,7 +9,7 @@
                 <author role="translatorEng" xml:id="UT22084-096-070-9">Paul G. Hackett</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2024</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -32,7 +32,7 @@
                     <biblScope>vol.101, ff.274v-275r(pp.548-549)</biblScope>
                     <author xml:lang="en" xml:id="UT22084-096-070-2">Anon</author>
                     <location work="UT4CZ5369" count-pages="2">
-                        <volume number="101" start-page="548" end-page="549"/>
+                        <volume number="102" start-page="548" end-page="549"/>
                     </location>
                     <idno parent-id="O1JC114941JC20569" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12868" work="W22084"/>
@@ -64,6 +64,9 @@
                 </change>
                 <change who="#line-tofte" when="2024-02-08T11:32:48.831Z" type="text-version" status="0.0.2" xml:id="UT22084-096-070-10">
                     <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#sameer" when="2024-07-08T07:12:25.216Z" type="text-version" status="0.0.3" xml:id="UT22084-096-070-11">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
