--- a/translations/kangyur/placeholders/096-071_toh822,1105-verses_of_auspiciousness_for_the_five_tathagatas.xml
+++ b/translations/kangyur/placeholders/096-071_toh822,1105-verses_of_auspiciousness_for_the_five_tathagatas.xml
@@ -11,7 +11,7 @@
                 <author role="translatorEng" xml:id="UT22084-096-071-5">Dylan Esler</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2024</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -32,7 +32,7 @@
                     <ref>Toh 1105</ref>
                     <biblScope>vol.101, ff.275r-275v(pp.549-550)</biblScope>
                     <location work="UT4CZ5369" count-pages="2">
-                        <volume number="101" start-page="549" end-page="550"/>
+                        <volume number="102" start-page="549" end-page="550"/>
                     </location>
                     <idno parent-id="O1JC114941JC20569" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12869" work="W22084"/>
@@ -52,6 +52,9 @@
                 </change>
                 <change who="#line-tofte" when="2024-02-08T10:26:44.513Z" type="text-version" status="0.0.2" xml:id="UT22084-096-071-6">
                     <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#sameer" when="2024-07-08T07:13:17.018Z" type="text-version" status="0.0.3" xml:id="UT22084-096-071-7">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
